2002-04-16  Sven Wischnowsky  <wischnow@zsh.org>

	* users/4836: Completion/Unix/Type/_path_files: make
	_path_files use match specs from the matcher style when calling
	compfiles

	* 16991: Completion/Base/Utility/_values: make _values not use
	-Q

	* 16990: Src/Zle/zle_tricky.c: treat backslashed bangs in
	double quotes specially in get_comp_string(), they are more
	like $s there

2002-04-12  Clint Adams  <clint@zsh.org>

        * 16973: Completion/Debian/Command/_apt: complete package name
        argument to apt-cache policy.

        * 16972: Completion/Unix/Type/_hosts: complete for aaaa, zone, mx,
	soa, txt.

2002-04-09  Peter Stephenson  <pws@csr.com>

	* 16942: Src/glob.c:  Allow zero-length matches in parameter
	substitutions.

2002-04-04  Oliver Kiddle  <opk@zsh.org>

	* 16935: Completion/Unix/Command/_ssh: update list of options
	completed and add sftp completion

2002-04-04  Clint Adams  <clint@zsh.org>

        * 16934: Completion/Unix/Command/_ssh: complete -1 as well as -2.

2002-03-27  Oliver Kiddle  <opk@zsh.org>

	* John Beppu: 16866 (tweaked): Completion/Unix/Command/_figlet:
	new completion for figlet

	* 16908: Doc/Zsh/compsys.yo: alter _generic example to be more robust

2002-03-25  Oliver Kiddle  <opk@zsh.org>

	* Clint: 15079: Completion/Unix/Command/_last: completion for last

	* 16804: Completion/Unix/Command/_sccs,
	Completion/Unix/Command/.distfiles: completion for sccs

	* 16864: Completion/Unix/Command/_ssh: fix remote file completion
	with relative paths

2002-03-17  Bart Schaefer  <schaefer@zsh.org>

	* 16820: Test/E01options.ztst: change tests to match 16759.

	* 16556: Src/builtin.c: Error messages added in 16504,16505 should
	not change the behavior of >&- redirections.

	* Felix Rosencrantz: 16546: Completion/Unix/Command/_perl:
	complete the arguments to a perl script with _normal.

2002-03-17  Clint Adams  <clint@zsh.org>

        * 16850: Completion/Unix/Command/_rsync: remote file completion via